# TDD

./: .gitignore  pyproject.toml
deploy_tools/: gunicorn-rememberlist.store.service  rememberlist.store
server/: functional_tests.py
server/accounts/: authentication.py  models.py  urls.py  views.py
server/accounts/migrations/: 0001_initial.py  0002_token.py  0003_alter_token_uid.py
server/accounts/tests/: test_authentication.py  test_models.py  test_views.py
server/deploy_tools/: fabfile.py  gunicorn-rememberlist.store.service  provisioning_notes.md  rememberlist.store.conf
server/functional_tests/: apps.py  base.py  server_tools.py  test_layout_and_styling.py  test_list_item_validation.py  test_login.py  test_my_lists.py  test_simple_list_creation.py  tests.py
server/functional_tests/management/commands/: create_session.py
server/lists/: forms.py  models.py  tests.py  urls.py  views.py
server/lists/migrations/: 0001_initial.py  0002_item_text.py  0003_list.py  0004_item_list.py  0005_alter_item_options_alter_item_unique_together.py  0006_list_owner.py
server/lists/static/: list.js
server/lists/static/tests/: tests.html
server/lists/templates/: base.html  list.html  my_lists.html
server/lists/tests/: test_all.py  test_forms.py  test_models.py  test_views.py
server/server/: settings.py  urls.py
