[tool.poetry]
name = "tdd"
version = "0.1.0"
description = ""
authors = ["viktor d <10xl.pro@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
selenium = "^4.19.0"
gunicorn = "^22.0.0"
fabric3 = "^1.14.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
