[tool.poetry]
name = "rememberlist"
version = "0.1.0"
description = ""
authors = ["root"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
selenium = "^4.20.0"
gunicorn = "^22.0.0"
fabric = {git = "https://github.com/fabric/fabric.git", rev = "2.7"}
patchwork = "^1.0.1"


[[tool.poetry.source]]
name = "patchwork3"
url = "https://github.com/getpatchwork/patchwork.git"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
